--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -2,3 +2,17 @@
     margin: 0;
     padding: 0;
 }
+
+/*removendo a scrollbar*/
+::-webkit-scrollbar {
+    width: 0em;
+    height: 0em;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
