--- a/frontend/src/assets/css/NavBar.module.css
+++ b/frontend/src/assets/css/NavBar.module.css
@@ -7,6 +7,7 @@
     background-color: #383B40;
     text-align: center;
     border-right: 1px solid #ccc;
+    border-top: 1px solid white;
 }
 
 .navbar li {
