--- a/frontend/src/assets/css/TextArea.module.css
+++ b/frontend/src/assets/css/TextArea.module.css
@@ -3,27 +3,28 @@
     display: inline-block;
     width: 50vw;
     height: 100vh;
+    border-right: 1px solid white;
 }
 
 .header_container {
     text-align: center;
-    /*padding: 1%;*/
+    border-top: 1px solid white;
+    box-sizing: border-box;
     background-color: #2E2F34;
     color: white;
 }
 
 .align_right {
+    padding: 2% 4%;
     display: inline-block;
-    width: 70%;
+    width: 60%;
     text-align: right;
 }
 
 .align_left {
     display: inline-block;
-    height: 100%;
     width: 30%;
     text-align: left;
-    background-color: #1B212F;
 }
 
 textarea {
@@ -46,8 +47,19 @@ textarea:focus {
 
 .button {
     padding: 10px 30px;
-    border: 1px solid black;
-    background-color: initial;
+    border: none;
+    background-color: purple;
+    color: white;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    cursor: pointer;
+}
+
+.button_tittle {
+    padding: 10px 30px;
+    background-color: #1B212F;
+    border: none;
     color: white;
     font-family: inherit;
     font-size: inherit;
